syntax = "proto3";

package timeline_service;

service TimelineserviceService {
    rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
    string message = 1;
}

message PingResponse {
    string message = 1;
}
